web/css/main.css
/* global site structure */

body {
  color: white;
  font-size: 66%;
  /*background: url("jquery/dark-hive/images/ui-bg_highlight-soft_35_222222_1x100.png") repeat-x scroll 50% 50% #222222;*/
  background-color: #222222;
}

div#site {
  height: auto !important;
  min-height: 100%;
  position: relative;
  width: 1024px;
  margin: 0 auto;
  color: white;
  padding: 0 0 23em;
  /*background: url("jquery/dark-hive/images/ui-bg_highlight-soft_35_222222_1x100.png") repeat-x scroll 50% 50% #111111;*/
 background-color: #111111;
}

div#header {
  border-bottom: 0.1em solid #0972A5;
  padding: 1em;
}

div#content {
  min-height: 100%;
  padding: 1em 1em 5em;
}

div#footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  border-top: 0.1em solid #0972A5;
}

/* global element styling */

a {
  color: #0972A5;
}

a:hover {
  color: #26B3F7;
}

p {
  padding: 1em;
}

h3 {
  text-align: center;
  width: auto;
}

h3 span {
  font-size: 75%;
}

.highlight {
  color: white;
  line-height: 2em;
  padding: 0.1em 0.4em;
  font-size: 1em;
  border: 1px solid #26B3F7;
  background: url('jquery/dark-hive/images/?new=0972a5&w=1&h=100&f=png&q=100&fltr[]=over|textures/04_highlight_hard.png|0|0|20') repeat-x scroll 50% 50% #0972A5;
}

.keyword {
  font-weight: bold;
  color: #0972A5;
}

.keywordBright {
  font-weight: bold;
  color: #26B3F7;
}
.actionHolder a {
  float: right;
}

.greek {
    font-family: "Lucida Grande","Cardo","Arial Unicode MS","New Athena Unicode","Athena Unicode","Lucida Grande","Verdana","Tahoma", "IFAO-Grec Unicode", 'KadmosU' !important;
}

/* CORRECTION NEW */

form#correctionNew {
  margin: 0 auto;
  width: 26em;
  padding: 2em;
  position: relative;
}

form#correctionNew label {
  margin: 0.2em;
  width: 20%;
  display: block;
  float: left;
}

form#correctionNew div {
  clear: both;
  float: none;
}

form#correctionNew div select,
form#correctionNew div textarea,
form#correctionNew div input {
  width: 70%;
  margin: 0.2em;
  float: right;
}

form#correctionNew div textarea,
form#correctionNew div input {
  border: 0.1em solid #0972A5;
}

form#correctionNew div input#form_position {
  width: 100%;
}

form#correctionNew div textarea {
  width: 100%;
  padding: 0.1em 0 0.1em;
}

form#correctionNew input.submit{
  margin: 0.2em;
  float: right;
}

form#correctionNew div.idno {
  position: absolute;
  width: 16em;
  top: 2em;
  right: -16em;

}

/* LOGIN */

form#login {
  margin: 0 auto;
  width: 19em;
  padding: 10em;
}

form#login label{
  float: left;
  margin: 0.2em;
}

form#login input{
  float: right;
  margin: 0.2em;
}

form#login input.data{
  border: 0.1em solid #0972A5;
  width: 12em;
}

/* CORRETION SHOW */

div.log{
  height: 20em;
}

/* CORRECTION LIST */

/* FORM DIV */

div#form div {
  position: relative;
  width: 100%;
  clear: both;
  float: none;
}

div#form div ul {
    background: #ffc73d url('jquery/dark-hive/images/ui-bg_glass_40_ffc73d_1x400.png') 50% 50% repeat-x;

    border: 1px solid #FFB73D;
    color: #111111;
    border-radius: 6px 6px 6px 6px;
    outline: 0 none !important;
    margin: 0;

    float: none;
    clear: both;
}

/* CORRECTION REPORT */

table.reportLeiden thead th,
table.reportLeiden tbody td.edition {
  height: 2.2em;
  text-align: left;
  vertical-align: middle;
  padding: 0.2em 0.4em 0.2em 0.4em;
  font-size: 1.1em;
}

table.reportLeiden tbody td {
  padding: 0.2em 0.4em 0.2em 0.4em;
  vertical-align: top;
}

table.reportLeiden tbody td.edition {
  font-weight: bold;
  vertical-align: top;
}

table.reportLeiden thead th.task  {
  font-weight: normal;
  font-style: italic;
}

